Switched over from another project which I was just copying over to this one. I realized that was illogical. I am Spock. ILLOGICAL. Just nerded out there. Fixed background image by darkening. Expanding window now works. Spacing fixed.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,3 @@
-html {
-	min-height: 100%;
-	height: 100%;
-}
-
 body {
 	/*margin: 0;*/
 	/*font-family: "Lato", sans-serif;*/
@@ -28,7 +23,7 @@ h3 {
 }
 
 #homeSlide {
-	background-image: url('/img/mainstreet_blur.jpg');
+	background-image: url('/img/mainstreet_blur_dark.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center bottom;
@@ -46,6 +41,9 @@ h3 {
 	/*margin: auto;*/
 }
 
+#homeWords {
+	padding-bottom: 10px; /* Janky fix for the fact that the Exo 2 font adds 5px of space above itself. */
+}
 
 #registerButton {
 	padding: 0px 24px 5px 24px; /* Exo 2 font has floaty space above it. This fixes it. */
